# stc

./: README.txt  meson.build
.github/workflows/: stc.yml
broken/: meson.build  random_filenames.c  socketpair_full.c
compilation/: all_headers.c  ctype_precedence.c  m_pi_test.c  meson.build  sys_signalfd.c
coredump/: coredump.sh  meson.build  sigsegv.c
ctor_dtor/: dll2.c  dll3.c  dll_dtor.c  meson.build
cygwin/: conv_path.c  meson.build
filesystem/: flock1.c  flock2.c  many_files.c  many_locks.c  meson.build
fortify/: meson.build  realloc_fortify.c  realloc_fortify_3.c
locale/: gugu1.c  gugu2.c  meson.build
pathconv/: meson.build  winwdev.c
process/: atforktest.c  meson.build
strings/: meson.build  wcstombs-utf8.c  wmemset_test.c
